--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,3 +1,10 @@
-- name: "This is test playbook"
-hosts: localhost
-connection: local
+---
+# This playbook prints a simple debug message
+- name: Echo
+  hosts: localhost
+  connection: local
+  
+  tasks:
+  - name: Print debug message
+  debug:
+    msg: "{{text}}"
